--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
+import AppNavbar from "../components/Navbar.jsx";
+import Hero from "../components/Hero.jsx";
+import Projects from "../components/Projects.jsx";
+import ProyectosRueda from "../components/ProyectosRueda.astro";
+import Backend from "../components/backend.astro";
+import SobreMi from "../components/SobreMi.astro";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout title="Ayelén Quiroga | Portfolio">
+  <AppNavbar client:load />
+  <Hero client:load/>
+
+  <SobreMi slot="fullscreen" />
+ 
+  </BaseLayout>
