--- a/src/components/SobreMi.astro
+++ b/src/components/SobreMi.astro
@@ -1,4 +1,5 @@
-<section class="sobre-mi-wrapper relative h-screen w-screen overflow-hidden">
+<section class="sobre-mi-wrapper relative min-h-[300vh] overflow-hidden">
+
 
   <!-- HERO -->
   <div class="sobre-mi-hero absolute inset-0">
@@ -17,7 +18,8 @@
   </div>
 
    <!-- CONTENIDO -->
-  <div class="sobre-mi-content absolute inset-0 flex items-center justify-center px-10">
+  <div class="sobre-mi-content relative min-h-screen flex items-center justify-center">
+
 
     <!-- GRID 2 COLUMNAS -->
     <div class="grid md:grid-cols-2 gap-20 w-full max-w-6xl items-center">
